loading models from conf

--- a/default.conf
+++ b/default.conf
@@ -1,15 +1,15 @@
 [bidding]
-bidder = ../models/gib21_model/gib21-1000000
-info = ../models/gib21_info_model/gib21_info-500000
+bidder = models/gib21_model/gib21-1000000
+info = models/gib21_info_model/gib21_info-500000
 
 [lead]
-lead = ../models/lead_model_b/lead-1000000
+lead = models/lead_model_b/lead-1000000
 
 [eval]
-lead_single_dummy = ../models/lr3_model/lr3-1000000
+lead_single_dummy = models/lr3_model/lr3-1000000
 
 [cardplay]
-lefty = ../models/lefty_model/lefty-1000000
-dummy = ../models/dummy_model/dummy-920000
-righty = ../models/righty_model/righty-1000000
-decl = ../models/decl_model/decl-1000000
+lefty = models/lefty_model/lefty-1000000
+dummy = models/dummy_model/dummy-920000
+righty = models/righty_model/righty-1000000
+decl = models/decl_model/decl-1000000
