--- a/scripts/match/bidding/C.conf
+++ b/scripts/match/bidding/C.conf
@@ -1,5 +1,8 @@
+[models]
+include_system = False
+
 [bidding]
-bidder = models/gib21_model/gib21-1000000
+bidder = models/withsystem/bidding-1000000
 info = models/gib21_info_model/gib21_info-500000
 
 [lead]
@@ -13,3 +16,11 @@ lefty = models/lefty_model/lefty-1000000
 dummy = models/dummy_model/dummy-920000
 righty = models/righty_model/righty-1000000
 decl = models/decl_model/decl-1000000
+
+[sampling]
+lead_accept_threshold = 0.01
+bidding_threshold_sampling = 0.1
+play_accept_threshold = 0.03
+bid_accept_play_threshold = 0.05
+sample_hands_auction = 64
+
