Fixed error in the gameserver

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ install/dist/gameserver.exe
 install/dist/game.exe
 install/dist/table_manager_client.exe
 install/venv
+install/dist/Championships- BEN v WBridge5.pbn
