Updates to run matches between different models

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ scripts/match/bidding/0.1vs0.05
 scripts/match/bidding/0.2vs0.05
 scripts/match/bidding/training/html
 scripts/training/bidding/binary
-.vscode/settings.json
+.vscode
 install/build
 install/dist/config
 install/dist/models
@@ -21,3 +21,4 @@ install/dist/game.exe
 install/dist/table_manager_client.exe
 install/venv
 install/dist/Championships- BEN v WBridge5.pbn
+models/eamon
