Moved some threshold parameters to configuration

--- a/scripts/match/bidding/A.conf
+++ b/scripts/match/bidding/A.conf
@@ -7,6 +7,7 @@ info = models/gib21_info_model/gib21_info-500000
 
 [lead]
 lead = models/lead_model_b/lead-1000000
+lead_threshold = 0.05
 
 [eval]
 lead_single_dummy = models/lr3_model/lr3-1000000
@@ -23,4 +24,5 @@ bidding_threshold_sampling = 0.1
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 64
+sample_boards_for_action = 2048
 
