--- a/scripts/training/bidding/A.conf
+++ b/scripts/training/bidding/A.conf
@@ -23,3 +23,4 @@ bidding_threshold_sampling = 0.1
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 64
+sample_boards_for_action = 2048
