--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -8,6 +8,7 @@ search_threshold = 0.1
 
 [lead]
 lead = models/lead_model_b/lead-1000000
+lead_threshold = 0.05
 
 [eval]
 lead_single_dummy = models/lr3_model/lr3-1000000
@@ -24,4 +25,5 @@ bidding_threshold_sampling = 0.75
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
+sample_boards_for_action = 2048
 
