--- a/scripts/match/bidding/E.conf
+++ b/scripts/match/bidding/E.conf
@@ -2,12 +2,12 @@
 include_system = False
 
 [bidding]
-bidder = models/sayc/sayc-1000000
-info = models/sayc_info/binfo_sayc-500000
-search_threshold = 0.1
+bidder = models/eamon/21gf/21gfc-12720000
+info = models/eamon/21gfinfo/binfo_21gfc-500000
 
 [lead]
 lead = models/lead_model_b/lead-1000000
+lead_threshold = 0.05
 
 [eval]
 lead_single_dummy = models/lr3_model/lr3-1000000
@@ -24,4 +24,4 @@ bidding_threshold_sampling = 0.1
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 64
-
+sample_boards_for_action = 2048
