--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,8 @@ scripts/training/bidding/binary
 install/build
 install/dist/config
 install/dist/models
-install/dist/appserver.exe
+install/dist/*.exe
 install/dist/gamedb.*
-install/dist/gameserver.exe
-install/dist/game.exe
-install/dist/table_manager_client.exe
 install/venv
 install/dist/Championships- BEN v WBridge5.pbn
 models/eamon
