--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -18,6 +18,7 @@ lefty = models/lefty_model/lefty-1000000
 dummy = models/dummy_model/dummy-920000
 righty = models/righty_model/righty-1000000
 decl = models/decl_model/decl-1000000
+sample_hands_play = -1
 
 [sampling]
 lead_accept_threshold = 0.01
