--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -3,7 +3,7 @@ include_system = False
 tf_version = 2
 
 [bidding]
-bidder = models/bidding.h5
+bidder = scripts/training/bidding/model/bidding.h5
 info = models/binfo.h5
 search_threshold = 0.1
 
@@ -28,5 +28,5 @@ play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
 sample_boards_for_auction = 5000
-sample_boards_for_auction_lead = 50000
+sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 128
