--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -3,15 +3,20 @@ include_system = False
 tf_version = 1
 
 [bidding]
-bidder = models/gib21_model/gib21-1000000
+bidder = scripts/training/bidding/model/bidding-1248000
 info = models/gib21_info_model/gib21_info-500000
 search_threshold = 0.1
 
 [lead]
+# Neural network for suggesting opening lead
 lead = models/lead_model_b/lead-1000000
-lead_threshold = 0.05
+# Ignore cards as opening lead  below this value from neural network
+lead_threshold = 0.01
+# Lead this card from neural network if prediction is over this value
+lead_accept_nn = 0.75
 
 [eval]
+# Neural network for making single dummy estimates
 lead_single_dummy = models/lr3_model/lr3-1000000
 
 [cardplay]
@@ -22,11 +27,15 @@ decl = models/decl_model/decl-1000000
 sample_hands_play = 100
 
 [sampling]
+# Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
-bidding_threshold_sampling = 0.75
+# Filter to remove hands, where we do not trust the bidding
+bidding_threshold_sampling = 0.25
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
 sample_boards_for_auction = 5000
-sample_boards_for_auction_lead = 50000
-sample_hands_opening_lead = 128
+# How many boards should we sample to find the number of samples below
+sample_boards_for_auction_opening_lead = 5000
+# Number of samples made, when finding the opening lead
+sample_hands_opening_lead = 20
