--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,19 +1,23 @@
 [models]
 include_system = False
+# Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = models/gib21_model/gib21-1000000
-info = models/gib21_info_model/gib21_info-500000
+bidder = D:\github\ben\UCBC 2024\Models\bidding-1209000
+info = D:\github\ben\UCBC 2024\Models\binfo-906000
+# If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
+# If there is bid above this threshold, make that bid ignoring other bids
+no_search_threshold = 0.75
 
 [lead]
 # Neural network for suggesting opening lead
 lead = models/lead_model_b/lead-1000000
 # Ignore cards as opening lead  below this value from neural network
 lead_threshold = 0.01
-# Lead this card from neural network if prediction is over this value
-lead_accept_nn = 0.75
+# Lead this card suggested by neural network if prediction is over this value
+lead_accept_nn = 0.66
 
 [eval]
 # Neural network for making single dummy estimates
@@ -25,6 +29,8 @@ dummy = models/dummy_model/dummy-920000
 righty = models/righty_model/righty-1000000
 decl = models/decl_model/decl-1000000
 sample_hands_play = 100
+# Should possible claim be calculated
+claim = False
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
