--- a/UCBC 2024/BBA convention cards/WBRIDGE5 - SAYC.INI
+++ b/UCBC 2024/BBA convention cards/WBRIDGE5 - SAYC.INI
@@ -35,7 +35,7 @@ Version=18
 Isign=9
 Olympus=0
 Inf_ent=0
-Opposant=SAYC
+Opposant=QUELCONQUE
 Linux=0
 Bridgez_stor=1
 [Ench]
@@ -48,7 +48,7 @@ NsMic=0
 NsNon_precis=1
 Nsdk_dt=1
 NsLeaping=0
-Nslandy=0
+Nslandy=1
 NsMulti_landy=0
 Ns2faible=1
 Ns2Kfort=0
@@ -56,7 +56,7 @@ NsOuvfaib=1
 NsSplinter=1
 NsMininv=0
 NsRoudi=0
-NsRkcb=0
+NsRkcb=1
 NsSand=0
 NsTrus=0
 NsMmin=1
@@ -112,4 +112,4 @@ fond=10485760
 fond-ecran=11796403
 Fond-variable=0
 [WBR5HIST]
-0=C:\Christine\Bridge\Boards\Test 16.pbn
+0=C:\Christine\Bridge\Formats\Bridge Captain\Test Bids\4S 6L.pbn
