--- a/UCBC 2024/BBA convention cards/WBRIDGE5 - WB5.INI
+++ b/UCBC 2024/BBA convention cards/WBRIDGE5 - WB5.INI
@@ -35,76 +35,76 @@ Version=18
 Isign=9
 Olympus=0
 Inf_ent=0
-Opposant=SAYC
+Opposant=WBRIDGE5
 Linux=0
 Bridgez_stor=1
 [Ench]
 Ns1SaNV=15
 Ns1Sa=15
 NsTexas=1
-NsTexMin=0
+NsTexMin=1
 Ns2SA=1
-NsMic=0
-NsNon_precis=1
-Nsdk_dt=1
-NsLeaping=0
-Nslandy=0
-NsMulti_landy=0
+NsMic=1
+NsNon_precis=0
+Nsdk_dt=0
+NsLeaping=1
+Nslandy=1
+NsMulti_landy=1
 Ns2faible=1
-Ns2Kfort=0
+Ns2Kfort=1
 NsOuvfaib=1
 NsSplinter=1
 NsMininv=0
-NsRoudi=0
-NsRkcb=0
-NsSand=0
-NsTrus=0
+NsRoudi=1
+NsRkcb=1
+NsSand=1
+NsTrus=1
 NsMmin=1
 Ns3Sa=1
-Ns2Saspe=0
-Ns2SaJacoby=1
-NsBergen=0
+Ns2Saspe=1
+Ns2SaJacoby=0
+NsBergen=1
 NsS4f=1
-NsRodrigue=0
+NsRodrigue=1
 NsNamyats=1
 NsMaj51SA=1
 NsMin61SA=1
 NsGambling=1
-NsGerber=1
-NsCollante=0
+NsGerber=0
+NsCollante=1
 EO1SaNV=15
 EO1Sa=15
 EOTexas=1
-EOTexMin=0
+EOTexMin=1
 EO2SA=1
-EoMic=0
-EoNon_precis=1
-Eodk_dt=1
-EoLeaping=0
+EoMic=1
+EoNon_precis=0
+Eodk_dt=0
+EoLeaping=1
 EOlandy=1
-EOMulti_landy=0
+EOMulti_landy=1
 EO2faible=1
-EO2Kfort=0
+EO2Kfort=1
 EOOuvfaib=1
 EOSplinter=1
 EOMininv=0
-EORoudi=0
+EORoudi=1
 EORkcb=1
-EoSand=0
-EoTrus=0
+EoSand=1
+EoTrus=1
 EoMmin=1
 Eo3Sa=1
-Eo2Saspe=0
-Eo2SaJacoby=1
-EoBergen=0
+Eo2Saspe=1
+Eo2SaJacoby=0
+EoBergen=1
 EoS4f=1
-EoRodrigue=0
+EoRodrigue=1
 EoNamyats=1
 EoMaj51SA=1
 EoMin61SA=1
 EoGambling=1
-EoGerber=1
-EoCollante=0
+EoGerber=0
+EoCollante=1
 [COULEURS]
 trefle=8388608
 Carreau=1852121
@@ -112,4 +112,4 @@ fond=10485760
 fond-ecran=11796403
 Fond-variable=0
 [WBR5HIST]
-0=C:\Christine\Bridge\Boards\Test 16.pbn
+0=C:\Christine\Bridge\Formats\Bridge Captain\Test Bids\4S 6L.pbn
