--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -1,14 +1,25 @@
 [models]
-include_system = False
+include_system = True
+NS = 1
+EW = 2
+# Version of tensorflow to use
+tf_version = 1
 
 [bidding]
 bidder = ../models/bidding-100000
 info = ../models/binfo-100000
+# If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
+# If there is bid above this threshold, make that bid ignoring other bids
+no_search_threshold = 0.75
 
 [lead]
 lead = ../models/lead-1000000
+# Ignore cards as opening lead below this value from neural 
 lead_threshold = 0.1
+
+# Lead this card suggested by neural network if prediction is over this value
+lead_accept_nn = 0.66
 
 [eval]
 lead_single_dummy = ../models/lr3-1000000
@@ -19,14 +30,20 @@ dummy = ../models/dummy-920000
 righty = ../models/righty-1000000
 decl = ../models/decl-1000000
 sample_hands_play = 100
+# Should possible claim be calculated
+claim = False
+
 
 [sampling]
+# Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
-bidding_threshold_sampling = 0.75
+# Filter to remove hands, where we do not trust the bidding
+bidding_threshold_sampling = 0.25
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
 sample_boards_for_auction = 5000
+# How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
+# Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 128
-
