--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -1,38 +1,36 @@
 [models]
-include_system = True
+include_system = False
 NS = 1
 EW = 2
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = ../models/bidding-100000
-info = ../models/binfo-100000
+bidder = UCBC 2024/models/bidding-3233000
+info = UCBC 2024/models/binfo-286000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.75
+no_search_threshold = 0.99
 
 [lead]
-lead = ../models/lead-1000000
-# Ignore cards as opening lead below this value from neural 
-lead_threshold = 0.1
-
+lead = UCBC 2024/models/lead-1000000
+# Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
+lead_threshold = 0.05
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.66
 
 [eval]
-lead_single_dummy = ../models/lr3-1000000
+lead_single_dummy = UCBC 2024/models/lr3-1000000
 
 [cardplay]
-lefty = ../models/lefty-1000000
-dummy = ../models/dummy-920000
-righty = ../models/righty-1000000
-decl = ../models/decl-1000000
+lefty = UCBC 2024/models/lefty-1000000
+dummy = UCBC 2024/models/dummy-920000
+righty = UCBC 2024/models/righty-1000000
+decl = UCBC 2024/models/decl-1000000
 sample_hands_play = 100
 # Should possible claim be calculated
 claim = False
-
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
