--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -1,17 +1,28 @@
 [models]
-include_system = False
+include_system = True
+NS = 1
+EW = 2
+# Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = scripts/training/bidding/model/bidding-1248000
-info = models/gib21_info_model/gib21_info-500000
+bidder = D:\github\ben\UCBC 2024\Models\bidding-3233000
+info = D:\github\ben\UCBC 2024\Models\binfo-286000
+# If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
+# If there is bid above this threshold, make that bid ignoring other bids
+no_search_threshold = 0.75
 
 [lead]
+# Neural network for suggesting opening lead
 lead = models/lead_model_b/lead-1000000
-lead_threshold = 0.05
+# Ignore cards as opening lead below this value from neural 
+lead_threshold = 0.01
+# Lead this card suggested by neural network if prediction is over this value
+lead_accept_nn = 0.66
 
 [eval]
+# Neural network for making single dummy estimates
 lead_single_dummy = models/lr3_model/lr3-1000000
 
 [cardplay]
@@ -20,13 +31,19 @@ dummy = models/dummy_model/dummy-920000
 righty = models/righty_model/righty-1000000
 decl = models/decl_model/decl-1000000
 sample_hands_play = 100
+# Should possible claim be calculated
+claim = False
 
 [sampling]
+# Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
-bidding_threshold_sampling = 0.75
+# Filter to remove hands, where we do not trust the bidding
+bidding_threshold_sampling = 0.25
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
 sample_boards_for_auction = 5000
+# How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
-sample_hands_opening_lead = 128
+# Number of samples made, when finding the opening lead
+sample_hands_opening_lead = 60
