Fixed error in sampling and model generation possible for single system

--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,5 @@ src/Eastdb.*
 src/Westdb.*
 src/Northdb.*
 src/Southdb.*
-scripts/training/data/input-17-11-2023-alternate.ben
+scripts/training/data/input-17-11*
+
