--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -1,33 +1,33 @@
 [models]
-include_system = False
+include_system = True
 NS = 1
 EW = 2
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/models/bidding-3233000
-info = UCBC 2024/models/binfo-286000
+bidder = Models/bidding-3233000
+info = Models/binfo-286000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
 [lead]
-lead = UCBC 2024/models/lead-1000000
+lead = Models/lead-1000000
 # Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
 lead_threshold = 0.05
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.66
 
 [eval]
-lead_single_dummy = UCBC 2024/models/lr3-1000000
+lead_single_dummy = Models/lr3-1000000
 
 [cardplay]
-lefty = UCBC 2024/models/lefty-1000000
-dummy = UCBC 2024/models/dummy-920000
-righty = UCBC 2024/models/righty-1000000
-decl = UCBC 2024/models/decl-1000000
+lefty = Models/lefty-1000000
+dummy = Models/dummy-920000
+righty = Models/righty-1000000
+decl = Models/decl-1000000
 sample_hands_play = 100
 # Should possible claim be calculated
 claim = False
@@ -36,10 +36,13 @@ claim = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding
-bidding_threshold_sampling = 0.25
+bidding_threshold_sampling = 0.01
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
+# Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
+# Minimum number of hands when caclulating scores
+min_sample_hands_auction = 10
 sample_boards_for_auction = 5000
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
