--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -6,30 +6,28 @@ EW = 2
 tf_version = 1
 
 [bidding]
-bidder = D:\github\ben\UCBC 2024\Models\bidding-3233000
-info = D:\github\ben\UCBC 2024\Models\binfo-286000
+bidder = UCBC 2024/Models/bidding-3233000
+info = UCBC 2024/Models/binfo-286000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.99
+no_search_threshold = 0.999
 
 [lead]
-# Neural network for suggesting opening lead
-lead = models/lead_model_b/lead-1000000
-# Ignore cards as opening lead below this value from neural 
-lead_threshold = 0.01
+lead = UCBC 2024/Models/lead-1000000
+# Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
+lead_threshold = 0.05
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.66
 
 [eval]
-# Neural network for making single dummy estimates
-lead_single_dummy = models/lr3_model/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/lr3-1000000
 
 [cardplay]
-lefty = models/lefty_model/lefty-1000000
-dummy = models/dummy_model/dummy-920000
-righty = models/righty_model/righty-1000000
-decl = models/decl_model/decl-1000000
+lefty = UCBC 2024/Models/lefty-1000000
+dummy = UCBC 2024/Models/dummy-920000
+righty = UCBC 2024/Models/righty-1000000
+decl = UCBC 2024/Models/decl-1000000
 sample_hands_play = 100
 # Should possible claim be calculated
 claim = False
@@ -38,7 +36,7 @@ claim = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding
-bidding_threshold_sampling = 0.25
+bidding_threshold_sampling = 0.10
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
