--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -10,6 +10,8 @@ search_threshold = 0.1
 [lead]
 lead = models/lead.h5
 lead_threshold = 0.05
+# Lead this card suggested by neural network if prediction is over this value
+lead_accept_nn = 0.66
 
 [eval]
 lead_single_dummy = models/single_dummy.h5
@@ -27,6 +29,9 @@ bidding_threshold_sampling = 0.75
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
+min_sample_hands_auction = 10
 sample_boards_for_auction = 5000
+# How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
+# Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 128
