--- a/scripts/training/bidding_info/default.conf
+++ b/scripts/training/bidding_info/default.conf
@@ -27,6 +27,7 @@ bidding_threshold_sampling = 0.75
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
 sample_hands_auction = 128
+min_sample_hands_auction = 10
 sample_boards_for_auction = 5000
 sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 128
