--- a/src/config/sayc.conf
+++ b/src/config/sayc.conf
@@ -1,14 +1,20 @@
 [models]
 include_system = True
+# Version of tensorflow to use
+tf_version = 1
 
 [bidding]
 bidder = models/withsystem/SAYC/bidding-1000000
 info = models/withsystem/SAYC/binfo-500000
 search_threshold = 0.1
+# If there is bid above this threshold, make that bid ignoring other bids
+no_search_threshold = 1
 
 [lead]
 lead = models/lead_model_b/lead-1000000
 lead_threshold = 0.05
+# Lead this card suggested by neural network if prediction is over this value
+lead_accept_nn = 0.66
 
 [eval]
 lead_single_dummy = models/lr3_model/lr3-1000000
@@ -25,8 +31,10 @@ lead_accept_threshold = 0.01
 bidding_threshold_sampling = 0.1
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
-sample_hands_auction = 64
+sample_hands_auction = 128
+min_sample_hands_auction = 10
 sample_boards_for_auction = 5000
+# How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
+# Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 128
-
