--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -1,5 +1,6 @@
 [models]
 include_system = True
+use_bba = False
 NS = 1
 EW = 2
 # Version of tensorflow to use
@@ -7,18 +8,19 @@ tf_version = 1
 
 [bidding]
 bidder = Models/bidding-3233000
-info = Models/binfo-286000
+info = Models/binfo-808000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
 [lead]
-lead = Models/lead-1000000
+lead_suit = Models/lead-1000000
+lead_nt = Models/lead-1000000
 # Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
 lead_threshold = 0.05
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.66
+lead_accept_nn = 0.99
 
 [eval]
 lead_single_dummy = Models/lr3-1000000
@@ -28,7 +30,12 @@ lefty = Models/lefty-1000000
 dummy = Models/dummy-920000
 righty = Models/righty-1000000
 decl = Models/decl-1000000
+# Number of samples when playing the hand
 sample_hands_play = 100
+# Minimum number of boards we want returned for sampling
+min_sample_hands_play = 20
+# Number of samples we will generate to find sample_hands_play
+sample_boards_for_play = 5000
 # Should possible claim be calculated
 claim = False
 
@@ -36,14 +43,17 @@ claim = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding
-bidding_threshold_sampling = 0.01
+bidding_threshold_sampling = 0.25
+# Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
+# Filter to remove hands not consistent with the bidding
 bid_accept_play_threshold = 0.05
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
-# Minimum number of hands when caclulating scores
-min_sample_hands_auction = 10
+# The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
+# Minimum number of hands when caclulating scores in the bidding
+min_sample_hands_auction = 10
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
