--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -11,15 +11,16 @@ info = D:\github\ben\UCBC 2024\Models\binfo-286000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 1
+no_search_threshold = 0.999
 
 [lead]
 # Neural network for suggesting opening lead
-lead = models/lead_model_b/lead-1000000
+lead_suit = models/lead_model_b/lead-1000000
+lead_nt = models/lead_model_b/lead-1000000
 # Ignore cards as opening lead below this value from neural 
-lead_threshold = 0.01
+lead_threshold = 0.05
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.66
+lead_accept_nn = 0.99
 
 [eval]
 # Neural network for making single dummy estimates
@@ -30,7 +31,12 @@ lefty = models/lefty_model/lefty-1000000
 dummy = models/dummy_model/dummy-920000
 righty = models/righty_model/righty-1000000
 decl = models/decl_model/decl-1000000
+# Number of samples when playing the hand
 sample_hands_play = 100
+# Minimum number of boards we want returned for sampling
+min_sample_hands_play = 20
+# Number of samples we will generate to find sample_hands_play
+sample_boards_for_play = 5000
 # Should possible claim be calculated
 claim = False
 
@@ -41,9 +47,12 @@ lead_accept_threshold = 0.01
 bidding_threshold_sampling = 0.25
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
+# Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
-min_sample_hands_auction = 10
+# The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
+# Minimum number of hands when caclulating scores in the bidding
+min_sample_hands_auction = 10
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
