--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -8,8 +8,11 @@ info = models/binfo.h5
 search_threshold = 0.1
 
 [lead]
-lead = models/lead.h5
+lead_suit = models/lead.h5
+lead_nt = models/lead.h5
 lead_threshold = 0.05
+# Lead this card suggested by neural network if prediction is over this value
+lead_accept_nn = 0.99
 
 [eval]
 lead_single_dummy = models/single_dummy.h5
@@ -19,15 +22,25 @@ lefty = models/lefty.h5
 dummy = models/dummy.h5
 righty = models/righty.h5
 decl = models/decl.h5
+# Number of samples when playing the hand
 sample_hands_play = 100
+# Minimum number of boards we want returned for sampling
+min_sample_hands_play = 20
+# Number of samples we will generate to find sample_hands_play
+sample_boards_for_play = 5000
+# Should possible claim be calculated
+claim = False
 
 [sampling]
 lead_accept_threshold = 0.01
 bidding_threshold_sampling = 0.75
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
+# Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
-min_sample_hands_auction = 10
+# The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
+# Minimum number of hands when caclulating scores in the bidding
+min_sample_hands_auction = 10
 sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 128
