--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -10,17 +10,17 @@ tf_version = 1
 bidder = Models/bidding-3233000
 info = Models/binfo-808000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.1
+search_threshold = 0.10
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
 [lead]
-lead_suit = Models/lead-1000000
-lead_nt = Models/lead-1000000
+lead_suit = Models/lead_suit-154000
+lead_nt = Models/lead_nt-59000
 # Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
-lead_threshold = 0.05
+lead_threshold = 0.07
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.99
+lead_accept_nn = 0.999
 
 [eval]
 lead_single_dummy = Models/lr3-1000000
