--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -10,17 +10,17 @@ tf_version = 1
 bidder = UCBC 2024/Models/bidding-3233000
 info = UCBC 2024/Models/binfo-808000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.10
+search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
 [lead]
-lead_suit = UCBC 2024/Models/lead-1000000
-lead_nt = UCBC 2024/Models/lead-1000000
+lead_suit = UCBC 2024/Models/lead_suit-154000
+lead_nt = UCBC 2024/Models/lead_nt-59000
 # Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
-lead_threshold = 0.05
+lead_threshold = 0.07
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.99
+lead_accept_nn = 0.999
 
 [eval]
 lead_single_dummy = UCBC 2024/Models/lr3-1000000
@@ -44,7 +44,9 @@ claim = False
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding
 bidding_threshold_sampling = 0.25
+# Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
+# Filter to remove hands not consistent with the bidding
 bid_accept_play_threshold = 0.05
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
