--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -2,15 +2,15 @@
 include_system = True
 use_bba = False
 NS = 1
-EW = 2
+EW = 99
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = Models/bidding-3233000
-info = Models/binfo-808000
+bidder = Models/NS1EW99-bidding-3233000
+info = Models/NS1EW99-binfo-3233000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.10
+search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
@@ -23,7 +23,7 @@ lead_threshold = 0.07
 lead_accept_nn = 0.999
 
 [eval]
-lead_single_dummy = Models/lr3-1000000
+lead_single_dummy = Models/single_dummy-312000
 
 [cardplay]
 lefty = Models/lefty-1000000
