--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -7,8 +7,8 @@ EW = 2
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/bidding-3233000
-info = UCBC 2024/Models/binfo-808000
+bidder = UCBC 2024/Models/NS1EW2-bidding-3233000
+info = UCBC 2024/Models/NS1EW2-binfo-808000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -23,7 +23,7 @@ lead_threshold = 0.07
 lead_accept_nn = 0.999
 
 [eval]
-lead_single_dummy = UCBC 2024/Models/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/single_dummy-312000
 
 [cardplay]
 lefty = UCBC 2024/Models/lefty-1000000
