--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,13 +1,14 @@
 [models]
 include_system = True
+use_bba = False
 NS = 1
 EW = 2
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = D:\github\ben\UCBC 2024\Models\bidding-3233000
-info = D:\github\ben\UCBC 2024\Models\binfo-286000
+bidder = UCBC 2024/Models/NS1EW2-bidding-3233000
+info = UCBC 2024/Models/NS1EW2-binfo-808000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -17,20 +18,19 @@ no_search_threshold = 0.999
 # Neural network for suggesting opening lead
 lead_suit = models/lead_model_b/lead-1000000
 lead_nt = models/lead_model_b/lead-1000000
-# Ignore cards as opening lead below this value from neural 
+# Ignore cards as opening lead below this value from neural
 lead_threshold = 0.01
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.99
+lead_accept_nn = 0.999
 
 [eval]
-# Neural network for making single dummy estimates
-lead_single_dummy = models/lr3_model/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/lr3-1000000
 
 [cardplay]
-lefty = models/lefty_model/lefty-1000000
-dummy = models/dummy_model/dummy-920000
-righty = models/righty_model/righty-1000000
-decl = models/decl_model/decl-1000000
+lefty = UCBC 2024/Models/lefty-1000000
+dummy = UCBC 2024/Models/dummy-920000
+righty = UCBC 2024/Models/righty-1000000
+decl = UCBC 2024/Models/decl-1000000
 # Number of samples when playing the hand
 sample_hands_play = 100
 # Minimum number of boards we want returned for sampling
@@ -45,7 +45,9 @@ claim = False
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding
 bidding_threshold_sampling = 0.25
+# Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
+# Filter to remove hands not consistent with the bidding
 bid_accept_play_threshold = 0.05
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
