--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -16,10 +16,10 @@ no_search_threshold = 0.999
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = models/lead_model_b/lead-1000000
-lead_nt = models/lead_model_b/lead-1000000
-# Ignore cards as opening lead below this value from neural
-lead_threshold = 0.01
+lead_suit = UCBC 2024/Models/lead_suit-154000
+lead_nt = UCBC 2024/Models/lead_nt-59000
+# Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
+lead_threshold = 0.07
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
 
