--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -23,7 +23,7 @@ lead_threshold = 0.07
 lead_accept_nn = 0.999
 
 [eval]
-lead_single_dummy = Models/single_dummy-312000
+lead_single_dummy = Models/lr3-1000000
 
 [cardplay]
 lefty = Models/lefty-1000000
