Changed driver.human back to boolean

--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -23,7 +23,7 @@ lead_threshold = 0.07
 lead_accept_nn = 0.999
 
 [eval]
-lead_single_dummy = UCBC 2024/Models/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
 
 [cardplay]
 lefty = UCBC 2024/Models/lefty-1000000
@@ -57,4 +57,4 @@ min_sample_hands_auction = 10
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 128
+sample_hands_opening_lead = 500
