--- a/scripts/match/bidding/UCBC2024src.conf
+++ b/scripts/match/bidding/UCBC2024src.conf
@@ -15,7 +15,6 @@ search_threshold = 0.1
 no_search_threshold = 0.999
 
 [lead]
-# Neural network for suggesting opening lead
 lead_suit = UCBC 2024/Models/lead_suit-154000
 lead_nt = UCBC 2024/Models/lead_nt-59000
 # Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
@@ -24,7 +23,7 @@ lead_threshold = 0.07
 lead_accept_nn = 0.999
 
 [eval]
-lead_single_dummy = UCBC 2024/Models/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/single_dummy-1121000
 
 [cardplay]
 lefty = UCBC 2024/Models/lefty-1000000
@@ -32,7 +31,7 @@ dummy = UCBC 2024/Models/dummy-920000
 righty = UCBC 2024/Models/righty-1000000
 decl = UCBC 2024/Models/decl-1000000
 # Number of samples when playing the hand
-sample_hands_play = 128
+sample_hands_play = 100
 # Minimum number of boards we want returned for sampling
 min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
