--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -2,13 +2,13 @@
 include_system = True
 use_bba = False
 NS = 1
-EW = 2
+EW = 99
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW2-bidding-3233000
-info = UCBC 2024/Models/NS1EW2-binfo-808000
+bidder = UCBC 2024/Models/NS1EW99-bidding-3961000
+info = UCBC 2024/Models/NS1EW99-binfo-3961000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -21,9 +21,18 @@ lead_nt = UCBC 2024/Models/lead_nt-59000
 lead_threshold = 0.07
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
+# Use double dummy statistics when evaluating the opening lead - default is single dummy
+double_dummy = True
+# Force a minimum number of leads to consider
+min_opening_leads = 1
 
 [eval]
-lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
+# Model for finding single dummy estimates provided an opening lead
+lead_single_dummy = UCBC 2024/Models/lr3-1000000
+# Model for finding single dummy estimates without opening lead
+no_lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
+# Include opening lead, when making single dummy estimates
+lead_included = False
 
 [cardplay]
 lefty = UCBC 2024/Models/lefty-1000000
@@ -31,7 +40,7 @@ dummy = UCBC 2024/Models/dummy-920000
 righty = UCBC 2024/Models/righty-1000000
 decl = UCBC 2024/Models/decl-1000000
 # Number of samples when playing the hand
-sample_hands_play = 100
+sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
 min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
