--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -1,42 +1,43 @@
 [models]
 include_system = True
+use_bba = False
 NS = 1
-EW = 2
+EW = 99
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = D:\github\ben\UCBC 2024\Models\bidding-3233000
-info = D:\github\ben\UCBC 2024\Models\binfo-286000
+bidder = UCBC 2024/Models/NS1EW99-bidding-3961000
+info = UCBC 2024/Models/NS1EW99-binfo-3961000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
 [lead]
-# Neural network for suggesting opening lead
-lead_suit = models/lead_model_b/lead-1000000
-lead_nt = models/lead_model_b/lead-1000000
-# Ignore cards as opening lead below this value from neural 
-lead_threshold = 0.05
+lead_suit = UCBC 2024/Models/lead_suit-154000
+lead_nt = UCBC 2024/Models/lead_nt-59000
+# Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
+lead_threshold = 0.07
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.99
+lead_accept_nn = 0.999
 
 [eval]
-# Neural network for making single dummy estimates
-lead_single_dummy = models/lr3_model/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/lr3-1000000
+no_lead_single_dummy = UCBC 2024/Models/single_dummy-1562000
+lead_included = False
 
 [cardplay]
-lefty = models/lefty_model/lefty-1000000
-dummy = models/dummy_model/dummy-920000
-righty = models/righty_model/righty-1000000
-decl = models/decl_model/decl-1000000
+lefty = UCBC 2024/Models/lefty-1000000
+dummy = UCBC 2024/Models/dummy-920000
+righty = UCBC 2024/Models/righty-1000000
+decl = UCBC 2024/Models/decl-1000000
 # Number of samples when playing the hand
-sample_hands_play = 100
+sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
 min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
-sample_boards_for_play = 5000
+sample_boards_for_play = 1000
 # Should possible claim be calculated
 claim = False
 
@@ -45,7 +46,9 @@ claim = False
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding
 bidding_threshold_sampling = 0.25
+# Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
+# Filter to remove hands not consistent with the bidding
 bid_accept_play_threshold = 0.05
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
@@ -56,4 +59,4 @@ min_sample_hands_auction = 10
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 128
+sample_hands_opening_lead = 500
