Added new parameter when finding matching samples during play

--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -51,12 +51,14 @@ claim = False
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
-# Filter to remove hands, where we do not trust the bidding
+# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 bidding_threshold_sampling = 0.25
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
-# Filter to remove hands not consistent with the bidding
-bid_accept_play_threshold = 0.05
+# Filter to remove hands not consistent with the bidding. Used during play
+bid_accept_play_threshold = 0.20
+# If we dont find enough samples, then include down to this threshold. Used during play
+bid_extend_play_threshold = 0.0
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
 # The number of hands we will generate to find sample_hands_auction
