--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -18,7 +18,7 @@ no_search_threshold = 0.999
 # Neural network for suggesting opening lead
 lead_suit = UCBC 2024/Models/lead_suit-154000
 lead_nt = UCBC 2024/Models/lead_nt-59000
-# Ignore cards as opening lead below this value from neural
+# Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.07
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
@@ -56,8 +56,10 @@ lead_accept_threshold = 0.01
 bidding_threshold_sampling = 0.25
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
-# Filter to remove hands not consistent with the bidding
-bid_accept_play_threshold = 0.05
+# Filter to remove hands not consistent with the bidding. Used during play
+bid_accept_play_threshold = 0.20
+# If we dont find enough samples, then include down to this threshold. Used during play
+bid_extend_play_threshold = 0.0
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 128
 # The number of hands we will generate to find sample_hands_auction
