--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -76,3 +76,5 @@ bid_extend_bid_threshold = 0.01
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 500
+# Max number of samples to include when reviewing a board
+sample_hands_for_review = 10
