--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ scripts/training/data/BBA*.ben
 scripts/training/bidding/stats*.txt
 scripts/training/data/5 mill deals with bidding.zip
 scripts/training/data/5 mill deals with bidding.ben
+fly.io
