UI Changes and implementation of Claim and Hint

--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -49,7 +49,7 @@ min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
-claim = False
+claim = True
 # Use bidding info during play
 use_biddinginfo = False
 
