--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ scripts/training/data/5 mill deals with bidding.ben
 fly.io
 scripts/training/bidding/auctions.txt
 scripts/training/data/2023.12.29-input.bba
+scripts/training/data/Camrose24_1.pbn
