--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ fly.io
 scripts/training/bidding/auctions.txt
 scripts/training/data/2023.12.29-input.bba
 scripts/training/data/Camrose24_1.pbn
+UCBC 2024/2024 Practice
