--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -7,10 +7,10 @@ EW = 99
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding-10724000
-info = UCBC 2024/Models/NS1EW99-binfo-6131000
+bidder = UCBC 2024/Models/NS1EW99-bidding-1335000
+info = UCBC 2024/Models/NS1EW99-binfo-1335000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.07
+search_threshold = 0.20
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
@@ -19,13 +19,13 @@ eval_after_bid_count = 12
 [lead]
 lead_suit = UCBC 2024/Models/lead_suit-154000
 lead_nt = UCBC 2024/Models/lead_nt-59000
-# Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
+# Ignore cards as opening lead below this value from neural
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
 double_dummy = True
-# Force a minimum number of leads to consider
+# Force a minimum number of leads to consider - overrides lead_threshold
 min_opening_leads = 3
 
 [eval]
@@ -48,12 +48,13 @@ min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
-claim = False
+claim = True
 # Use bidding info during play
 use_biddinginfo = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
+# Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 bidding_threshold_sampling = 0.25
@@ -74,6 +75,6 @@ bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 500
+sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
