--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -7,10 +7,10 @@ EW = 99
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding-10724000
-info = UCBC 2024/Models/NS1EW99-binfo-6131000
+bidder = UCBC 2024/Models/NS1EW99-bidding-1335000
+info = UCBC 2024/Models/NS1EW99-binfo-1335000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.05
+search_threshold = 0.20
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
@@ -26,8 +26,8 @@ lead_threshold = 0.07
 lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
 double_dummy = True
-# Force a minimum number of leads to consider
-min_opening_leads = 2
+# Force a minimum number of leads to consider - overrides lead_threshold
+min_opening_leads = 3
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -51,17 +51,18 @@ sample_boards_for_play = 5000
 # Should possible claim be calculated
 claim = True
 # Use bidding info during play
-use_biddinginfo = False
+use_biddinginfo = True
 
 [sampling]
-# Filter to remove hands, where the opening lead was not suggested by the neural network. Setting to 0 remove the validation
+# Filter to remove hands, where the opening lead was not suggested by the neural network
+# Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
-# Filter to remove hands, where we do not trust the bidding
+# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 bidding_threshold_sampling = 0.25
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.30
+bid_accept_play_threshold = 0.20
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
@@ -69,12 +70,12 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 20
+min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 5000
+sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 100
+sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
-sample_hands_for_review = 10
+sample_hands_for_review = 20
