--- a/scripts/training/bidding_info/default.conf
+++ b/scripts/training/bidding_info/default.conf
@@ -3,11 +3,13 @@ include_system = True
 use_bba = False
 NS = 1
 EW = 99
+# North and South will make the same request when asking the bidding neural network
+sameforboth = True
 tf_version = 1
 
 [bidding]
 bidder = models/gib21_model/gib21-1000000
-info = scripts/training/bidding_info/model/NS1EW99-binfo-546000
+info = UCBC 2024\Models/NS1EW99-binfo-6131000
 search_threshold = 0.1
 
 [lead]
