--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -3,25 +3,29 @@ include_system = True
 use_bba = False
 NS = 1
 EW = 99
+# North and South will make the same request when asking the bidding neural network
+sameforboth = True
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding-1335000
-info = UCBC 2024/Models/NS1EW99-binfo-1335000
+bidder = UCBC 2024/Models/NS1EW99-bidding_same-278000
+info = UCBC 2024/Models/NS1EW99-binfo_same-278000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.20
+search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
+# Use bidding quality in evaluation (if not good just use neaural network)
+use_biddingquality = True
 
 [lead]
 # Neural network for suggesting opening lead
 lead_suit = UCBC 2024/Models/lead_suit-154000
 lead_nt = UCBC 2024/Models/lead_nt-59000
 # Ignore cards as opening lead below this value from the neural network
-lead_threshold = 0.07
+lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
@@ -52,12 +56,15 @@ sample_boards_for_play = 5000
 claim = True
 # Use bidding info during play
 use_biddinginfo = True
+# Use bidding quality in evaluation
+use_biddingquality_in_eval = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
+use_distance = False
 bidding_threshold_sampling = 0.25
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
