--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -3,18 +3,22 @@ include_system = True
 use_bba = False
 NS = 1
 EW = 99
+# North and South will make the same request when asking the bidding neural network
+sameforboth = True
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding-1335000
-info = UCBC 2024/Models/NS1EW99-binfo-1335000
+bidder = UCBC 2024/Models/NS1EW99-bidding_same-5556000
+info = UCBC 2024/Models/NS1EW99-binfo_same-278000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.20
+search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
+# Use bidding quality in evaluation (if not good just use neaural network)
+use_biddingquality = True
 
 [lead]
 lead_suit = UCBC 2024/Models/lead_suit-154000
@@ -51,13 +55,19 @@ sample_boards_for_play = 5000
 claim = True
 # Use bidding info during play
 use_biddinginfo = True
+# Use bidding quality in evaluation, if bad samples, just use neural network
+use_biddingquality_in_eval = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
-bidding_threshold_sampling = 0.25
+#use_distance = False
+#bidding_threshold_sampling = 0.25
+# This is calculate using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
+use_distance = True
+bidding_threshold_sampling = 0.70
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # Filter to remove hands not consistent with the bidding. Used during play
@@ -73,7 +83,7 @@ min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 50000
+sample_boards_for_auction_opening_lead = 100000
 # Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
