--- a/scripts/match/bidding/E.conf
+++ b/scripts/match/bidding/E.conf
@@ -1,5 +1,7 @@
 [models]
 include_system = False
+# North and South will make the same request when asking the bidding neural network
+sameforboth = False
 # Version of tensorflow to use
 tf_version = 1
 
