--- a/scripts/match/bidding/default.conf
+++ b/scripts/match/bidding/default.conf
@@ -3,12 +3,14 @@ include_system = True
 use_bba = False
 NS = 1
 EW = 99
+# North and South will make the same request when asking the bidding neural network
+sameforboth = True
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding-2584000
-info = UCBC 2024/Models/NS1EW99-binfo-6131000
+bidder = UCBC 2024/Models/NS1EW99-bidding_same-5556000
+info = UCBC 2024/Models/NS1EW99-binfo_same-278000
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
@@ -62,5 +64,6 @@ bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 500
-
+sample_hands_opening_lead = 200
+# Max number of samples to include when reviewing a board
+sample_hands_for_review = 20
