--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -3,24 +3,30 @@ include_system = True
 use_bba = False
 NS = 1
 EW = 99
+# North and South will make the same request when asking the bidding neural network
+sameforboth = True
 # Version of tensorflow to use
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding-3961000
-info = UCBC 2024/Models/NS1EW99-binfo-3961000
+bidder = UCBC 2024/Models/NS1EW99-bidding_same-5556000
+info = UCBC 2024/Models/NS1EW99-binfo_same-278000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.1
+search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 
 [lead]
 lead_suit = UCBC 2024/Models/lead_suit-154000
 lead_nt = UCBC 2024/Models/lead_nt-59000
-# Ignore cards as opening lead below this value from neural - beware if to high it might find no lead
-lead_threshold = 0.07
+# Ignore cards as opening lead below this value from the neural network
+lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
+# Use double dummy statistics when evaluating the opening lead - default is single dummy
+double_dummy = True
+# Force a minimum number of leads to consider - overrides lead_threshold
+min_opening_leads = 3
 
 [eval]
 lead_single_dummy = UCBC 2024/Models/lr3-1000000
