--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -1,5 +1,7 @@
 [models]
 include_system = False
+# North and South will make the same request when asking the bidding neural network
+sameforboth = False
 tf_version = 2
 
 [bidding]
