New model + preparation for new play models

--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -9,8 +9,8 @@ sameforboth = True
 tf_version = 1
 
 [bidding]
-bidder = scripts/training/bidding/model/NS1EW99-bidding_same-6960000
-info = UCBC 2024/Models/NS1EW99-binfo_same-5556000
+bidder = UCBC 2024/Models/NS1EW99-bidding_same-5430000
+info = UCBC 2024/Models/NS1EW99-binfo_same-5430000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
