Rename of jack opening lead model

--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -25,8 +25,8 @@ eval_after_bid_count = 12
 use_biddingquality = True
 
 [lead]
-lead_suit = Models/lead_suit-154000
-lead_nt = Models/lead_nt-59000
+lead_suit = Models/jack_lead_suit-154000
+lead_nt = Models/jack_lead_nt-59000
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
