--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -1,5 +1,5 @@
 [models]
-include_system = True
+include_system = False
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
@@ -13,8 +13,8 @@ sameforboth = True
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding_same-5430000
-info = UCBC 2024/Models/NS1EW99-binfo_same-5430000
+bidder = UCBC 2024/Models/bidding-2257000
+info = UCBC 2024/Models/binfo-1128000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -26,8 +26,8 @@ use_biddingquality = True
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = UCBC 2024/Models/lead_suit-154000
-lead_nt = UCBC 2024/Models/lead_nt-59000
+lead_suit = UCBC 2024/Models/jack_lead_suit-154000
+lead_nt = UCBC 2024/Models/jack_lead_nt-59000
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.10
 # Lead this card suggested by neural network if prediction is over this value
