Added hcp-constraint  to PIMC, and handled situations where no samples was found in PIMC

--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -13,8 +13,8 @@ sameforboth = True
 tf_version = 1
 
 [bidding]
-bidder = Models/NS1EW99-bidding_same-5556000
-info = Models/NS1EW99-binfo_same-5556000
+bidder = Models/NS1EW99-bidding_same-2870000
+info = Models/NS1EW99-binfo_same-2082000
 # If there are multiple bids over this threshold make a simulation for the bids. -1 will just take highest
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -72,8 +72,11 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Are we using PIMC as declarer?
-PIMC = True
-pimc_wait = 0.5
+pimc_use = True
+# Max wait time for results from PIMC
+pimc_wait = 1
+# When should PIMC kick in
+pimc_start_trick = 1
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
