--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -73,8 +73,11 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Are we using PIMC as declarer?
-PIMC = True
-pimc_wait = 0.5
+pimc_use = True
+# Max wait time for results from PIMC
+pimc_wait = 1
+# When should PIMC kick in
+pimc_start_trick = 1
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
