Added parameter for using hcp constraints in PIMC

--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -13,8 +13,8 @@ sameforboth = True
 tf_version = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding_same-5556000
-info = UCBC 2024/Models/NS1EW99-binfo_same-5556000
+bidder = UCBC 2024/Models/NS1EW99-bidding_same-2870000
+info = UCBC 2024/Models/NS1EW99-binfo_same-2082000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -78,6 +78,9 @@ pimc_use = True
 pimc_wait = 1
 # When should PIMC kick in
 pimc_start_trick = 1
+# Extract hcp from samples and use as input to PIMC
+pimc_hcp_constraints = True
+
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
