Added suit constraints to PIMC

--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -77,6 +77,8 @@ pimc_use = True
 pimc_wait = 1
 # When should PIMC kick in
 pimc_start_trick = 1
+# Extract hcp from samples and use as input to PIMC
+pimc_hcp_constraints = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
