--- a/UCBC 2024/Conf/UCBC2024V2.conf
+++ b/UCBC 2024/Conf/UCBC2024V2.conf
@@ -15,8 +15,8 @@ bba_ns = 1
 bba_ew = 1
 
 [bidding]
-bidder = Models/NS1EW99-bidding_same-3362000
-info = Models/NS1EW99-binfo_same-2082000
+bidder = Models/NS1EW99-bidding_V2-1494000
+info = Models/NS1EW99-binfo_V2-1494000
 # If there are multiple bids over this threshold make a simulation for the bids. -1 will just take highest
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -65,7 +65,7 @@ decl_suit = Models/decl_suit-1278000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
-min_sample_hands_play = 20
+min_sample_hands_play = 5
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -76,16 +76,20 @@ use_biddinginfo = True
 use_biddingquality_in_eval = True
 
 [pimc]
-# Are we using PIMC as declarer? 
-pimc_use = True
+# Are we using PIMC as declarer or defender? 
+pimc_use_declaring = True
+pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
-pimc_wait = 3
+pimc_wait = 4
 # When should PIMC kick in
-pimc_start_trick = 1
+pimc_start_trick_declarer = 4
+pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
-# Stop evaluation with 1000 samples but pimc_wait takes precedence
-pim_max_playouts = 1000
+# Stop evaluation after finding the number of playouts unles pimc_wait expires before
+pim_max_playouts = 10000
+# Max number of threads PIMC is allowed to use
+pimc_max_threads = -1
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
