--- a/scripts/training/bidding/default201.conf
+++ b/scripts/training/bidding/default201.conf
@@ -14,8 +14,8 @@ bba_ns = 1
 bba_ew = 1
 
 [bidding]
-bidder = E:/Bridge/training/model/21GF/NS1EW99-bidding-V2-206000
-info = E:/Bridge/training/model/21GF/NS1EW99-binfo-V2-206000
+bidder = D:/github/ben/models/archive/sayc/NS1EW99-bidding_V2-1494000
+info = D:/github/ben/models/archive/sayc_info/NS1EW99-binfo_V2-1494000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -55,23 +55,27 @@ decl_suit = D:/github/ben/UCBC 2024/Models/jack/decl-1000000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
-min_sample_hands_play = 20
+min_sample_hands_play = 5
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 1000
 # Should possible claim be calculated
 claim = False
 
 [pimc]
-# Are we using PIMC as declarer? 
-pimc_use = True
+# Are we using PIMC as declarer or defender? 
+pimc_use_declaring = True
+pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick = 1
+pimc_start_trick_declarer = 4
+pimc_start_trick_defender = 4
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
-# Stop evaluation with 1000 samples but pimc_wait takes precedence
-pim_max_playouts = 1000
+# Stop evaluation after finding the number of playouts unles pimc_wait expires before
+pim_max_playouts = 10000
+# Max number of threads PIMC is allowed to use
+pimc_max_threads = -1
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
