--- a/src/config/PIMC.conf
+++ b/src/config/PIMC.conf
@@ -67,7 +67,7 @@ decl_suit = models/decl_model/decl-1000000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
-min_sample_hands_play = 20
+min_sample_hands_play = 5
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -78,16 +78,20 @@ use_biddinginfo = True
 use_biddingquality_in_eval = True
 
 [pimc]
-# Are we using PIMC as declarer? 
-pimc_use = False
+# Are we using PIMC as declarer or defender? 
+pimc_use_declaring = False
+pimc_use_defending = False
 # Max wait time for results from PIMC in seconds
-pimc_wait = 1
+pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick = 1
+pimc_start_trick_declarer = 1
+pimc_start_trick_defender = 1
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
-# Stop evaluation with 1000 samples but pimc_wait takes precedence
-pim_max_playouts = 1000
+# Stop evaluation after finding the number of playouts unles pimc_wait expires before
+pim_max_playouts = 10000
+# Max number of threads PIMC is allowed to use
+pimc_max_threads = -1
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
