--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -2,7 +2,7 @@
 name = default
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 1
+model_version = 0
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
@@ -15,8 +15,8 @@ bba_ns = 1
 bba_ew = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding_same-5556000
-info = UCBC 2024/Models/NS1EW99-binfo_same-5556000
+bidder = models/muppet/bidding-3730000
+info = models/muppet/binfo-1562000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -63,7 +63,7 @@ decl_suit = UCBC 2024/Models/decl_suit-1278000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
-min_sample_hands_play = 20
+min_sample_hands_play = 5
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -74,16 +74,20 @@ use_biddinginfo = True
 use_biddingquality_in_eval = True
 
 [pimc]
-# Are we using PIMC as declarer? 
-pimc_use = True
+# Are we using PIMC as declarer or defender? 
+pimc_use_declaring = True
+pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick = 1
-# Extract hcp and min max length from samples and use as input to PIMC
+pimc_start_trick_declarer = 4
+pimc_start_trick_defender = 4
+# Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
-# Stop evaluation with 1000 samples - pimc_wait takes precedence
-pim_max_playouts = 1000
+# Stop evaluation after finding the number of playouts unles pimc_wait expires before
+pim_max_playouts = 10000
+# Max number of threads PIMC is allowed to use
+pimc_max_threads = -1
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
