--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -90,6 +90,8 @@ pimc_constraints = True
 pim_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
+# If singleton, just play it without evaluating it
+pimc_autoplaysingleton = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
