API-fixes and autoplay singleton

--- a/src/config/SAYC PIMC trick5 Def.conf
+++ b/src/config/SAYC PIMC trick5 Def.conf
@@ -80,9 +80,11 @@ pimc_start_trick_defender = 9
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
-pim_max_playouts = 10000
+pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
+# If singleton, just play it without evaluating it
+pimc_autoplaysingleton = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
