--- a/UCBC 2024/Conf/UCBC2024V2.conf
+++ b/UCBC 2024/Conf/UCBC2024V2.conf
@@ -87,7 +87,7 @@ pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
-pim_max_playouts = 10000
+pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
