--- a/UCBC 2024/Conf/UCBC2024srcV2.conf
+++ b/UCBC 2024/Conf/UCBC2024srcV2.conf
@@ -53,21 +53,21 @@ double_dummy_eval = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
-opening_lead_included = True
-lefty_nt = UCBC 2024/Models/lefty_nt-475000
-dummy_nt = UCBC 2024/Models/dummy_nt-475000
-righty_nt = UCBC 2024/Models/righty_nt-475000
-decl_nt = UCBC 2024/Models/decl_nt-950000
-lefty_suit = UCBC 2024/Models/lefty_suit-999000
-dummy_suit = UCBC 2024/Models/dummy_suit-999000
-righty_suit = UCBC 2024/Models/righty_suit-999000
-decl_suit = UCBC 2024/Models/decl_suit-1278000
+opening_lead_included = False
+lefty_nt = UCBC 2024/Models/jack/lefty-1000000
+lefty_suit = UCBC 2024/Models/jack/lefty-1000000
+dummy_nt = UCBC 2024/Models/jack/dummy-920000
+dummy_suit = UCBC 2024/Models/jack/dummy-920000
+righty_nt = UCBC 2024/Models/jack/righty-1000000
+righty_suit = UCBC 2024/Models/jack/righty-1000000
+decl_nt = UCBC 2024/Models/jack/decl-1000000
+decl_suit = UCBC 2024/Models/jack/decl-1000000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
 min_sample_hands_play = 5
 # Number of samples we will generate to find sample_hands_play
-sample_boards_for_play = 5000
+sample_boards_for_play = 10000
 # Should possible claim be calculated
 claim = False
 # Use bidding info during play
@@ -87,7 +87,7 @@ pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
-pim_max_playouts = 10000
+pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
@@ -111,7 +111,7 @@ bid_accept_play_threshold = 0.40
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.01
+bid_extend_play_threshold = 0.001
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
