Updated version of PIMC and updated boards for bidding generation.

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ scripts/training/data/SAYC-Version 7918.pbn
 scripts/training/data/SAYC 7933 2024-03-06.ben
 UCBC 2024/Boards/input-2024-03-15.bba
 UCBC 2024/Boards/BBA/TMPbn2Cleaner.exe
+scripts/training/data/WBC/play.txt
