--- a/src/config/SAYC PIMC.conf
+++ b/src/config/SAYC PIMC.conf
@@ -81,6 +81,9 @@ pimc_start_trick_declarer = 4
 pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
+# On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
+# The API is stateless and will establish constraints at each trick
+pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
 pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
