--- a/UCBC 2024/Conf/UCBC2024srcV2.conf
+++ b/UCBC 2024/Conf/UCBC2024srcV2.conf
@@ -15,7 +15,7 @@ bba_ns = 1
 bba_ew = 1
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding_V2-1494000
+bidder = UCBC 2024/Models/NS1EW99-bidding_V2-11260000
 info = UCBC 2024/Models/NS1EW99-binfo_V2-1494000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
@@ -53,15 +53,15 @@ double_dummy_eval = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
-opening_lead_included = True
-lefty_nt = UCBC 2024/Models/lefty_nt-475000
-dummy_nt = UCBC 2024/Models/dummy_nt-475000
-righty_nt = UCBC 2024/Models/righty_nt-475000
-decl_nt = UCBC 2024/Models/decl_nt-950000
-lefty_suit = UCBC 2024/Models/lefty_suit-999000
-dummy_suit = UCBC 2024/Models/dummy_suit-999000
-righty_suit = UCBC 2024/Models/righty_suit-999000
-decl_suit = UCBC 2024/Models/decl_suit-1278000
+opening_lead_included = False
+lefty_nt = UCBC 2024/Models/jack/lefty-1000000
+lefty_suit = UCBC 2024/Models/jack/lefty-1000000
+dummy_nt = UCBC 2024/Models/jack/dummy-920000
+dummy_suit = UCBC 2024/Models/jack/dummy-920000
+righty_nt = UCBC 2024/Models/jack/righty-1000000
+righty_suit = UCBC 2024/Models/jack/righty-1000000
+decl_nt = UCBC 2024/Models/jack/decl-1000000
+decl_suit = UCBC 2024/Models/jack/decl-1000000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
@@ -86,6 +86,9 @@ pimc_start_trick_declarer = 4
 pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
+# On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
+# The API is stateless and will establish constraints at each trick
+pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
 pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
