Added PAR for boards from Practice Bidding, and implemented a new neural network. New models for GIB, and carding enhanced

--- a/scripts/match/bidding/default.conf
+++ b/scripts/match/bidding/default.conf
@@ -28,6 +28,8 @@ no_lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
 lead_included = False
 
 [cardplay]
+# This is telling if opening lead is included in the neural net for lefty
+opening_lead_included = False
 lefty_nt = models/lefty_model/lefty-1000000
 dummy_nt = models/dummy_model/dummy-920000
 righty_nt = models/righty_model/righty-1000000
