--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -13,6 +13,8 @@ use_bba = False
 # Use SAYC in BBA
 bba_ns = 1
 bba_ew = 1
+# Playing matchpoint? Otherwise it is teams
+matchpoint = False
 
 [contract]
 contract = models/contract/contract-193200
@@ -59,12 +61,12 @@ double_dummy_eval = True
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = False
 lefty_nt = UCBC 2024/Models/jack/lefty-1000000
-lefty_suit = UCBC 2024/Models/jack/lefty-1000000
 dummy_nt = UCBC 2024/Models/jack/dummy-920000
-dummy_suit = UCBC 2024/Models/jack/dummy-920000
 righty_nt = UCBC 2024/Models/jack/righty-1000000
-righty_suit = UCBC 2024/Models/jack/righty-1000000
 decl_nt = UCBC 2024/Models/jack/decl-1000000
+lefty_suit = UCBC 2024/Models/jack/lefty-1000000
+dummy_suit = UCBC 2024/Models/jack/dummy-920000
+righty_suit = UCBC 2024/Models/jack/righty-1000000
 decl_suit = UCBC 2024/Models/jack/decl-1000000
 # Number of samples when playing the hand
 sample_hands_play = 200
