--- a/src/config/GIB-2024.04.06.conf
+++ b/src/config/GIB-2024.04.06.conf
@@ -13,6 +13,8 @@ use_bba = False
 # Use SAYC in BBA
 bba_ns = 1
 bba_ew = 1
+# Playing matchpoint? Otherwise it is teams
+matchpoint = False
 
 [contract]
 contract = models/contract/contract-193200
@@ -31,6 +33,30 @@ use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
 
+[adjustments]
+# Are adjustments enabled
+use_adjustment = True
+# Add extra weigth on scores from neural network
+# The score from NN is multiplied to this and added to expected score
+adjust_NN = 50
+# If it was difficult to find samples we increase the trust in the NN
+adjust_NN_Few_Samples = 500
+# Substract this from expected score before XX (Double if vulnerable)
+adjust_XX = 200
+# Subtract this from expected score before double in passout situation
+# If not going 2 down, the udjustment is doubled
+adjust_X = 100
+# When bidding in the passout situation, we change the expected score
+adjust_passout = -100
+# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
+adjust_passout_negative = 3
+# If we get some very low scores from the NN, then adjust by this
+# Both will be tested, so a very low score will get both adjustments
+adjust_min1 = 0.002
+adjust_min2 = 0.0002
+adjust_min1_by = 200
+adjust_min2_by = 200
+
 [lead]
 # Neural network for suggesting opening lead
 lead_suit = models/lead_model_b/lead-1000000
@@ -44,8 +70,8 @@ double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
 min_opening_leads = 3
 # Opening lead agreement (random, attitude, 135 or 24)
-lead_from_pips_nt = random
-lead_from_pips_suit = random
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -101,6 +127,8 @@ pimc_max_playouts = 10000
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
 pimc_autoplaysingleton = True
+# PIMC trust NN
+pimc_trust_NN = 0.00
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
