--- a/UCBC 2024/MvsM/WBridge5.conf
+++ b/UCBC 2024/MvsM/WBridge5.conf
@@ -1,4 +1,5 @@
 [models]
+# BEN EW
 name = WBridge5
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
@@ -39,7 +40,7 @@ use_adjustment = True
 adjust_NN = 50
 # If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 500
-# Substract this from expected score before XX (Double if vulnerable)
+# subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
 # If not going 2 down, the udjustment is doubled
