--- a/src/config/GIB-V1.conf
+++ b/src/config/GIB-V1.conf
@@ -41,7 +41,7 @@ use_adjustment = True
 adjust_NN = 50
 # If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 500
-# Substract this from expected score before XX (Double if vulnerable)
+# subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
 # If not going 2 down, the udjustment is doubled
