Updated Match playing

--- a/scripts/match/bidding/default_noadjust.conf
+++ b/scripts/match/bidding/default_noadjust.conf
@@ -33,7 +33,7 @@ use_probability = False
 
 [adjustments]
 # Are adjustments enabled
-use_adjustment = True
+use_adjustment = False
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
