--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ scripts/training/data/SAYC 7933 2024-03-06.ben
 UCBC 2024/Boards/input-2024-03-15.bba
 UCBC 2024/Boards/BBA/TMPbn2Cleaner.exe
 scripts/training/data/WBC/play.txt
+scripts/match/bidding/default
