--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ UCBC 2024/Boards/input-2024-03-15.bba
 UCBC 2024/Boards/BBA/TMPbn2Cleaner.exe
 scripts/training/data/WBC/play.txt
 scripts/match/bidding/default
+UCBC 2024/MvsM/models/1 Mill SAYC.ben
