--- a/UCBC 2024/MvsM/Human.conf
+++ b/UCBC 2024/MvsM/Human.conf
@@ -20,8 +20,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = models/archive/sayc/bidding-1494000
-info = models/archive/sayc_info/binfo-1494000
+bidder = UCBC 2024/MvsM/Models/bidding-3125000
+info = UCBC 2024/MvsM/Models/binfo-3125000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -85,13 +85,13 @@ double_dummy_eval = True
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = False
 lefty_nt = UCBC 2024/Models/jack/lefty-1000000
-dummy_nt = UCBC 2024/Models/jack/dummy-920000
+dummy_nt = UCBC 2024/Models/dummy_nt-475000
 righty_nt = UCBC 2024/Models/jack/righty-1000000
-decl_nt = UCBC 2024/Models/jack/decl-1000000
+decl_nt = UCBC 2024/Models/decl_nt-9500000
 lefty_suit = UCBC 2024/Models/jack/lefty-1000000
-dummy_suit = UCBC 2024/Models/jack/dummy-920000
+dummy_suit = UCBC 2024/Models/dummy_suit-999000
 righty_suit = UCBC 2024/Models/jack/righty-1000000
-decl_suit = UCBC 2024/Models/jack/decl-1000000
+decl_suit = UCBC 2024/Models/decl_suit-12780000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
@@ -126,7 +126,7 @@ pimc_max_threads = -1
 # If singleton, just play it without evaluating it
 pimc_autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.01
+pimc_trust_NN = 0.00
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
