--- a/UCBC 2024/MvsM/GIB.conf
+++ b/UCBC 2024/MvsM/GIB.conf
@@ -1,19 +1,19 @@
 [models]
 # BEN NS
-name = GIB
+name = GIB 2/1
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 0
+model_version = 2
 # Version of tensorflow to use
 tf_version = 1
-# NS is SAYC and EW is WBridge5 with SAYC
-NS = 1
-EW = 99
+# NS and EW play the same system
+NS = -1
+EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+bba_ns = -1
+bba_ew = -1
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
@@ -21,8 +21,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = models/archive/gib21/bidding-3310000
-info = models/archive/gib21_info/binfo-3530000
+bidder = UCBC 2024/Models/bidding_V2-2260000
+info = UCBC 2024/Models/binfo_V2-3100000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -60,8 +60,8 @@ adjust_min2_by = 200
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = models/lead_model_b/lead-1000000
-lead_nt = models/lead_model_b/lead-1000000
+lead_suit = UCBC 2024/Models/lead_suit-999000
+lead_nt = UCBC 2024/Models/lead_nt-475000
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
@@ -76,7 +76,7 @@ lead_from_pips_suit = 135
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
-lead_single_dummy = models/lr3_model/lr3-1000000
+lead_single_dummy = UCBC 2024/Models/Jack/lr3-1000000
 # Model for finding single dummy estimates without opening lead
 no_lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
 # Include opening lead, when making single dummy estimates
@@ -88,11 +88,11 @@ double_dummy_eval = True
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = False
 lefty_nt = UCBC 2024/Models/jack/lefty-1000000
-dummy_nt = UCBC 2024/Models/dummy_nt-475000
+dummy_nt = UCBC 2024/Models/decl_nt-9500000
 righty_nt = UCBC 2024/Models/jack/righty-1000000
 decl_nt = UCBC 2024/Models/decl_nt-9500000
 lefty_suit = UCBC 2024/Models/jack/lefty-1000000
-dummy_suit = UCBC 2024/Models/dummy_suit-999000
+dummy_suit = UCBC 2024/Models/decl_suit-12780000
 righty_suit = UCBC 2024/Models/jack/righty-1000000
 decl_suit = UCBC 2024/Models/decl_suit-12780000
 # Number of samples when playing the hand
@@ -129,7 +129,7 @@ pimc_max_threads = -1
 # If singleton, just play it without evaluating it
 pimc_autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.01
+pimc_trust_NN = 0.00
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
@@ -162,4 +162,3 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 100
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
-
