--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ UCBC 2024/Boards/BBA/TMPbn2Cleaner.exe
 scripts/training/data/WBC/play.txt
 scripts/match/bidding/default
 UCBC 2024/MvsM/models/1 Mill SAYC.ben
+scripts/training/bidding/1 Mill SAYC.ben
