--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -1,12 +1,13 @@
 [models]
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 1
+model_version = 2
+api = True
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = 1
-EW = 99
+NS = -1
+EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
@@ -17,8 +18,8 @@ bba_ew = 1
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = scripts/training/bidding/model/NS1EW99-bidding_same-4163000
-info = scripts/training/bidding_info/model/NS1EW99-binfo_same-2082000
+bidder = scripts/training/bidding/model/bidding_V2-20000
+info = scripts/training/bidding_info/model/binfo_V2-90000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
