--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -3,17 +3,17 @@ name = GIB 2/1
 api = true
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 0
+model_version = 2
 # Version of tensorflow to use
 tf_version = 1
-# NS is SAYC and EW is WBridge5 with SAYC
-NS = 1
-EW = 99
+# NS and EW play the same system
+NS = -1
+EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+bba_ns = -1
+bba_ew = -1
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
@@ -21,8 +21,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = models/archive/gib21/bidding-3310000
-info = models/archive/gib21_info/binfo-3530000
+bidder = UCBC 2024/Models/bidding_V2-2260000
+info = UCBC 2024/Models/binfo_V2-3100000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -88,11 +88,11 @@ double_dummy_eval = True
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = False
 lefty_nt = models/lefty_model/lefty-1000000
-dummy_nt = UCBC 2024/Models/dummy_nt-475000
+dummy_nt = UCBC 2024/Models/decl_nt-950000
 righty_nt = models/righty_model/righty-1000000
 decl_nt = UCBC 2024/Models/decl_nt-950000
 lefty_suit = models/lefty_model/lefty-1000000
-dummy_suit = UCBC 2024/Models/dummy_suit-999000
+dummy_suit = UCBC 2024/Models/decl_suit-1278000
 righty_suit = models/righty_model/righty-1000000
 decl_suit = UCBC 2024/Models/decl_suit-1278000
 # Number of samples when playing the hand
