Updated description for model generation

--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -15,7 +15,7 @@ use_bba = False
 bba_ns = -1
 bba_ew = -1
 # Playing matchpoint? Otherwise it is teams
-matchpoint = False
+matchpoint = True
 
 [contract]
 contract = models/contract/contract-193200
